syntax = "proto3";

option java_multiple_files = true;

package portal_seeder;

service SeederServiceP {
    rpc Start(SeederInputP) returns (SeederOutputP);
}

message SeederInputP {
    string filename = 1;
}

message SeederOutputP {
    string endpoint = 1;
}